# python-monolith

./: .gitignore  README.md  pyproject.toml
apps/cli/: main.py
apps/gui/: main.py
apps/launcher/: main.py
apps/tui/: main.py
apps/web/: main.py
apps/web/static/: styles.css
apps/web/templates/: clicked.html  index.html
scripts/: example_script.py
shared/: utils.py
tests/: test_shared.py
